fixed line spacing

--- a/src/Components/Body.css
+++ b/src/Components/Body.css
@@ -282,3 +282,8 @@ button {
     opacity: 0;
   }
 }
+
+.padding {
+  padding: 15px;
+  line-height: 0px;
+}
