--- a/src/Components/projectThree/project3.css
+++ b/src/Components/projectThree/project3.css
@@ -11,7 +11,7 @@
 .shopping {
   display: flex;
   position: absolute;
-  top: 65%;
+  top: 70%;
   right: 65%;
   height: 25%;
   padding: 0px;
